dist: dzil: Force @SHARYANTO version (inspired by chorny)

--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ homepage  =http://metacpan.org/release/Pod-Weaver-Plugin-Eval
 repository=http://github.com/sharyanto/perl-Pod-Weaver-Plugin-Eval
 
 [@SHARYANTO]
+:version=0.09
 
 [Prereqs / TestRequires]
 
