--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,7 @@ copyright_holder=Steven Haryanto
 homepage  =http://metacpan.org/release/Pod-Weaver-Plugin-Eval
 repository=http://github.com/sharyanto/perl-Pod-Weaver-Plugin-Eval
 
-[@SHARYANTO]
+[@Author::SHARYANTO]
 :version=0.09
 
 [Prereqs / TestRequires]
