--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,7 @@ name=Pod-Weaver-Plugin-Eval
 
 [Prereqs]
 perl=5.010001
-;!lint-prereqs assume-used
+;!lint_prereqs assume-used
 Pod::Weaver=0
 
 [Extras / lint-prereqs / assume-provided]
